<resources>
    <string name="app_name">Stubar</string>
    <string name="title_activity_maps">Map</string>

    <string name="tvLogin">Login</string>
    <string name="btnLogin">Login</string>
    <string name="tvAskRegister">You are not registered yet?</string>
    <string name="tvBtnRegister">Click here!</string>
    <string name="btnSignInGoogle">Sign in with Google</string>
    <string name="title_activity_slide_bar_menu">SlideBarMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="empty">Empty</string>
    <string name="lbl_step_initializing">Initializing</string>
    <string name="lbl_step_checkingUpdates">Checking for updates</string>
    <string name="lbl_step_loading_data">Loading data</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="tvDarkMode">Dark mode</string>
    <string name="tvOffSound">Turn off the sound</string>
    <string name="labelAuthor">Author:</string>
    <string name="labelGrade">Grade:</string>
    <string name="labelTopic">Topic:</string>

    <!--- Bottom Navigation Bar -->
    <string name="tvPromotions">Promotions</string>
    <string name="tvUploadFile">Upload File</string>
    <string name="tvHome">Home</string>

    <string name="tvStubar">STUBAR</string>
    <string name="tvStuDocs">STUDOCS</string>

    <!-- AUTHENTIFICATION-->
    <string name="default_web_client_id" translatable="false">995030063929-c6qaeeh64dmeh0gfqr913i3kcr4ennso.apps.googleusercontent.com</string>
    <string name="title_activity_navigation_drawer">STUBAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!---REGISTER TEXT -->

    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday (00–00–0000)</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By checking the box you agree</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account?.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_test">test</string>
    <string name="drawer_closed">Closed</string>
    <string name="drawer_open">Open</string>
    <string name="edit_profile">Edit profile</string>
    <string name="restaurants">Restaurants</string>
    <string name="documents">Documents</string>
    <string name="search">Search</string>
    <string name="logOut">Log out</string>

    <!---REGISTER OUTPUT -->
    <string name="errorPassword">The passwords don\'t coincide</string>
    <string name="errorEmail">The email is in the incorrect format</string>
    <string name="errorBirthday">The Birthday is in the incorrect format</string>
    <string name="errorInstitution">The Institution can\'t be empty</string>

    <!--- Upload file text -->
    <string name="uploadfile">Upload a Document</string>
    <string name="insertFile">Insert a Document</string>
    <string name="edNameDocument">Enter the name of the document</string>
    <string name="edNameDegree">Enter your degree (ex: Computer science…)</string>

    <!-- Upload offer text  -->
    <string name="btnUploadImage">Upload an Image here</string>
    <string name="edOfferPrice">Enter the price of the offer</string>
    <string name="edOfferComment">Put your comment here</string>
    <string name="offers">OFFERS</string>
    <string name="documents_upper">DOCUMENTS</string>
    <string name="author">Anonymous</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="my_profile">MY PROFILE</string>
    <string name="promotions">PROMOTIONS</string>
    <string name="empty_offer">You haven\'t created an offer yet? Try it out now :)</string>
    <string name="empty_document">You haven\'t upload a document yet? Try it out now :)</string>
    <string name="confirm_new_password">Confirm the password</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="enter_new_password">Enter a password</string>
    <string name="login_here">Login here</string>
    <string name="insert_offer">INSERT OFFER</string>
</resources>