<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".UploadDocument">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivDocument"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="72dp"
                android:background="@drawable/stubarlogo" />

            <EditText
                android:id="@+id/edNameDocument"
                android:layout_width="288dp"
                android:layout_height="52dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_custom"
                android:ems="10"
                android:hint="@string/edNameDocument"
                android:inputType="textEmailAddress"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/edNameGrade"
                android:layout_width="288dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edittext_custom"
                android:ems="10"
                android:hint="@string/edNameDegree"
                android:inputType="textEmailAddress"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="#FFFFFF" />

            <Spinner
                android:id="@+id/spGrade"
                android:layout_width="239dp"
                android:layout_height="52dp"
                android:layout_marginTop="22dp"
                android:background="@color/purple_200"
                android:textAlignment="center"
                tools:ignore="MissingConstraints" />

            <Spinner
                android:id="@+id/spStudy"
                android:layout_width="239dp"
                android:layout_height="52dp"
                android:layout_marginTop="22dp"
                android:background="@color/purple_200"
                android:textAlignment="center"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnInsertDocument"
                android:layout_width="203dp"
                android:layout_height="56dp"
                android:layout_marginTop="40dp"
                android:text="@string/uploadfile"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>