<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".UploadOffer">

    <ImageView
        android:id="@+id/ivStubar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/stubarlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edOfferPrice"
        android:layout_width="288dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_custom"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/edOfferPrice"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edOfferComment" />

    <EditText
        android:id="@+id/edOfferComment"
        android:layout_width="288dp"
        android:layout_height="52dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/edittext_custom"
        android:ems="10"
        android:hint="@string/edOfferComment"
        android:inputType="text"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spOffer"
        android:autofillHints="Click"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/edOfferPrice"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:background="@color/purple_200"
        android:text="@string/btnUploadImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spOffer"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnInsertOffer"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="86dp"
        android:background="@color/purple_200"
        android:text="INSERT OFFER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadImage"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>